--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ic_profile"
         android:title="@string/title_profile" />
 
 </menu>
