Created custom action bar, todo.txt and changed button background

--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -1,29 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<?xml version = "1.0" encoding = "utf-8"?>
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
+    android:layout_width = "match_parent"
+    android:layout_height = "wrap_content"
+    android:gravity = "center_vertical"
+    android:padding = "10dp"
+    android:weightSum = "1">
+    <LinearLayout
+        android:layout_width = "0dp"
+        android:layout_height = "match_parent"
+        android:layout_weight = "0.5">
 
-    <Button android:id="@+id/add"
-        android:icon="@android:drawable/ic_menu_add"
-        android:orderInCategory="1"
-        android:text="nueva foto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:showAsAction="always"/>
+        <ImageButton
+            android:id="@+id/custom_bar_add"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_add_24"
+            android:background="?android:selectableItemBackground"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="SNAPRANK"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <Button android:id="@+id/search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:text="filtros"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orderInCategory="3"
-        app:showAsAction="always"
-        />
-
-
-</Toolbar>
+        <TextView
+            android:id = "@+id/custom_bar_name"
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:layout_marginLeft = "10dp"
+            android:text = "SnapRank"
+            android:textSize = "20sp"
+            android:textColor = "#000"
+            android:textStyle = "bold" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width = "0dp"
+        android:layout_height = "match_parent"
+        android:layout_weight = "0.5"
+        android:gravity = "end">
+        <ImageButton
+            android:id="@+id/custom_bar_filter"
+            android:layout_width = "wrap_content"
+            android:layout_height = "match_parent"
+            android:src = "@drawable/ic_settings_24"
+            android:background="?android:selectableItemBackground"/>
+    </LinearLayout>
+</LinearLayout>
