--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,13 +12,15 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/main_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/like"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:clickable="true"
+        android:onClick="gotoViewPic"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
