--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,37 +2,40 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:maxHeight="30dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        android:background="#404040"
+        >
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:layout_weight="1"
-            android:src="@drawable/landscape"/>
+            android:layout_weight="0.45"
+            android:layout_margin="1.3dp"
+            android:background="#FFF"
+            android:src="@drawable/ferran"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="0.3">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
-            <ImageView android:layout_width="20dp"
+            <ImageView
+                android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_weight="2"
-                android:layout_margin="3dp"
                 android:layout_gravity="center"
                 android:src="@drawable/user"/>
 
@@ -55,7 +58,9 @@
                     android:layout_weight="1"
                     android:layout_margin="3dp"
                     android:text="Ferran Devesa"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textAlignment="textStart"
+                    android:textColor="#FFF"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -63,7 +68,9 @@
                     android:layout_weight="1"
                     android:layout_margin="3dp"
                     android:text="La Vila"
-                    android:gravity="center"/>
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textColor="#FFF"/>
 
             </LinearLayout>
 
@@ -72,11 +79,20 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="3dp"
+            android:padding="3dp"
             android:text="Logros"
-            android:layout_weight="1"
+            android:layout_weight="0.4"
+            android:drawableLeft="@drawable/award"
             android:background="?android:selectableItemBackground"
+            android:textColor="#FFF"
             />
 
     </LinearLayout>
+
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.45" />
 
 </LinearLayout>
