--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -91,8 +91,13 @@
     </LinearLayout>
 
     <GridView
+        android:id="@+id/profile_grid"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.45" />
+        android:layout_weight="0.45"
+        android:numColumns="2"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"/>
 
 </LinearLayout>
