--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -77,6 +77,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/ib_profile_logros"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="3dp"
