--- a/app/src/main/res/layout/profile_grid_item.xml
+++ b/app/src/main/res/layout/profile_grid_item.xml
@@ -5,12 +5,10 @@
 
     <ImageView
         android:id="@+id/imagen_subida"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center"
         android:scaleType="fitCenter"
-        android:src="@drawable/like"
-        android:clickable="true"/>
-
+        android:src="@drawable/like"/>
 
 </FrameLayout>
