--- a/app/src/main/res/layout/profile_logros.xml
+++ b/app/src/main/res/layout/profile_logros.xml
@@ -20,7 +20,8 @@
         <view class="android.support.v7.widget.RecyclerView"
             android:id="@+id/rv_profile_logros"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="12dp">
         </view>
 
 </LinearLayout>
