--- a/app/src/main/res/layout/profile_logros_item.xml
+++ b/app/src/main/res/layout/profile_logros_item.xml
@@ -15,41 +15,47 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="5dp">
+            android:layout_margin="5dp"
+            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/iv_imagen_logro"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
                 android:src="@drawable/like" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="80dp"
             android:padding="8dp"
             android:orientation="vertical"
             android:layout_margin="5dp" >
-            <TextView
-                android:id="@+id/tv_logro_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="1dp"
-                android:layout_gravity="center"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                android:text="@string/logro_categoria"/>
             <TextView
                 android:id="@+id/tv_logro_fecha_desbloqueo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="1dp"
-                android:textSize="10sp"
+                android:layout_marginTop="5dp"
+                android:textSize="14dp"
                 android:textStyle="bold"
+                android:layout_marginLeft="5dp"
                 android:text="@string/logro_fecha_desbloqueo" />
+            <TextView
+                android:id="@+id/tv_logro_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:textSize="14dp"
+                android:text="@string/logro_categoria"/>
 
         </LinearLayout>
 
