Pruebas con otra imagen en el grid y ViewPic...

--- a/app/src/main/res/layout/view_pic.xml
+++ b/app/src/main/res/layout/view_pic.xml
@@ -31,17 +31,17 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        android:src="@drawable/like"
+        android:src="@drawable/taylor"
         android:background="#FFF"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="3dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp">
 
         <TextView
             android:id="@+id/tv_username"
@@ -56,14 +56,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFF"
-            android:text="Pedro SNCHZ" />
+            android:text="Ferran Devesa" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="3dp">
+        android:layout_margin="6dp">
 
         <TextView
             android:id="@+id/tv_title"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFF"
-            android:text="SEÑORA"
+            android:text="Taylor Hill"
             />
     </LinearLayout>
 
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="3dp">
+        android:layout_margin="6dp">
 
         <TextView
             android:id="@+id/tv_category"
@@ -101,14 +101,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFF"
-            android:text="TextView" />
+            android:text="Ladies" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="3dp">
+        android:layout_margin="6dp">
 
         <TextView
             android:id="@+id/tv_location"
@@ -123,7 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFF"
-            android:text="TextView" />
+            android:text="USA" />
     </LinearLayout>
 </LinearLayout>
 </LinearLayout>
