--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -44,5 +44,12 @@
             android:layout_height = "match_parent"
             android:src = "@drawable/ic_settings_24"
             android:background="?android:selectableItemBackground" />
+
+        <ImageButton
+            android:id="@+id/logoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/logout"
+            android:background="?android:selectableItemBackground"/>
     </LinearLayout>
 </LinearLayout>
