--- a/app/src/main/res/layout/fragment_user_ranking.xml
+++ b/app/src/main/res/layout/fragment_user_ranking.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserRankingFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".PhotoRankingFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -55,18 +53,19 @@
             tools:src="@tools:sample/avatars" />
 
         <GridView
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userSecond"
-            android:layout_width="395dp"
-            android:layout_height="420dp"
+            android:id="@+id/_userRanking"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userSecond" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
