--- a/app/src/main/res/layout/elementlayout.xml
+++ b/app/src/main/res/layout/elementlayout.xml
@@ -19,7 +19,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/divider3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/photos" />
 
     <ImageButton
         android:id="@+id/imageButton"
