--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -49,7 +49,8 @@
             android:id="@+id/logoutButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/logout"
-            android:background="?android:selectableItemBackground"/>
+            android:background="?android:selectableItemBackground"
+            android:visibility="gone"
+            app:srcCompat="@drawable/logout" />
     </LinearLayout>
 </LinearLayout>
