--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -84,7 +84,7 @@
             android:layout_height="match_parent"
             android:layout_margin="3dp"
             android:padding="15dp"
-            android:text="Logros"
+            android:text="@string/awards"
             android:layout_weight="0.4"
             android:drawableLeft="@drawable/award"
             android:background="?android:selectableItemBackground"
