--- a/app/src/main/res/layout/profile_logros_item.xml
+++ b/app/src/main/res/layout/profile_logros_item.xml
@@ -45,7 +45,7 @@
                 android:textSize="14dp"
                 android:textStyle="bold"
                 android:layout_marginLeft="5dp"
-                android:text="@string/logro_fecha_desbloqueo" />
+                android:text="@string/award_category" />
             <TextView
                 android:id="@+id/tv_logro_category"
                 android:layout_width="match_parent"
@@ -55,7 +55,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="5dp"
                 android:textSize="14dp"
-                android:text="@string/logro_categoria"/>
+                android:text="@string/award_date"/>
 
         </LinearLayout>
 
