--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,10 +16,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="6.3dp"
             android:layout_weight="0.45"
-            android:layout_margin="1.3dp"
-            android:background="#FFF"
+            android:scaleType="fitXY"
+            android:background="?android:selectableItemBackground"
             android:src="@drawable/ferran"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
