--- a/app/src/main/res/layout/activity_viewpic.xml
+++ b/app/src/main/res/layout/activity_viewpic.xml
@@ -27,7 +27,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_viewPicImagen"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="center"
