--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -15,8 +15,9 @@
             android:id="@+id/custom_bar_add"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_add_24"
-            android:background="?android:selectableItemBackground"/>
+            android:background="?android:selectableItemBackground"
+            android:onClick="uploadImage"
+            android:src="@drawable/ic_add_24" />
 
     </LinearLayout>
     <LinearLayout
