--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -58,6 +58,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:id="@+id/usernameText"
                     android:layout_height="wrap_content"
                     android:text="ferdemar"
                     android:layout_marginLeft="10dp"
@@ -73,6 +74,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
+                    android:id="@+id/locationText"
                     android:layout_height="wrap_content"
                     android:text="La Vila, España"
                     android:layout_gravity="center"
