--- a/app/src/main/res/layout/profile_grid_item.xml
+++ b/app/src/main/res/layout/profile_grid_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -9,6 +10,6 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:scaleType="fitCenter"
-        android:src="@drawable/like"/>
+        android:src="@drawable/arenaclock" />
 
 </FrameLayout>
