--- a/app/src/main/res/layout/fragment_user_ranking.xml
+++ b/app/src/main/res/layout/fragment_user_ranking.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="4dp">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#303030"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:src="@drawable/gold_trophy" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:src="@drawable/silver_trophy" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="5dp"
+            android:src="@drawable/bronze_trophy" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,70 +46,41 @@
             android:id="@+id/userFirst"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="6.3dp"
+            android:layout_margin="5dp"
             android:layout_weight="0.45"
-            android:scaleType="fitXY"
             android:background="?android:selectableItemBackground"
+            android:scaleType="fitXY"
             android:src="@drawable/ferran" />
 
         <ImageButton
             android:id="@+id/userSecond"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="6.3dp"
+            android:layout_margin="5dp"
             android:layout_weight="0.45"
-            android:scaleType="fitXY"
             android:background="?android:selectableItemBackground"
+            android:scaleType="fitXY"
             android:src="@drawable/ferran" />
 
         <ImageButton
             android:id="@+id/userThird"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="6.3dp"
+            android:layout_margin="5dp"
             android:layout_weight="0.45"
-            android:scaleType="fitXY"
             android:background="?android:selectableItemBackground"
+            android:scaleType="fitXY"
             android:src="@drawable/ferran" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:background="#303030"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/gold_trophy" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/silver_trophy" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/bronze_trophy" />
     </LinearLayout>
 
     <GridView
         android:id="@+id/userRanking_grid"
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_weight="0.45"
-        android:numColumns="4"
         android:horizontalSpacing="10dp"
+        android:numColumns="4"
         android:verticalSpacing="10dp" />
 
 </LinearLayout>
